vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_isreftype_operand.vv
fn main() {
	isreftype($embed_file(@FILE)) == false
}
